--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,12 +31,11 @@
           <div class="caption">
             <h3>Contact</h3>
             Anuprit Kale<br />
-            Feel free to contact me here -<br>
-            +1-415-471-4089<br />
-            My Linkedin - http://in.linkedin.com/pub/anuprit-kale/17/a40/a1b<br>
-My Twitter - @anupritt <br />
-Email - FIRST NAME [ A T ] g m a i l [ D O T ] c o m<br />
-Facebook - http://www.facebook.com/anuprit.kale
+            I never say no to a coffee -<br>
+            Email - FIRST NAME [ A T ] g m a i l [ D O T ] c o m<br />
+            <a href="http://www.linkedin.com/pub/anuprit-kale/17/a40/a1b/">Linkedin</a><br>
+<a href="http://twitter.com/anupritt">@anupritt</a><br />
+<a href="http://www.facebook.com/anuprit.kale">Facebook</a>
 
           </div>
 
