--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,10 @@
 <div class="hero-unit">
   <h2>Hola! I am Anuprit!</h2>
-  <p>My name is Anuprit Kale (No! I'm not eatble unless you're a zombie) and you're visiting my personal website. 
+  <p>My name is Anuprit Kale and you're visiting my personal website. 
   Currently, I live in the amazing city of San Francisco. 
   </p>
   <p>
   I am a super thin and super tall computer engineer who loves programming. If I get time from coding I like to hangout with friends, spend time with family and listen to music. I am fearless and love, love taking chances. I graduated from College Of Engineering, Pune in 2009. I quit my corporate job in 2011 and went down to Chile to join GymPact in its early stages. I enjoy solving problems a lot more than anything else. I am working on www.mydummyserver.com to create a stubbing framework which helps developers work efficiently.</p>
-  <p>
-    If I had a lot of money, I would become a fashion designer. But if I were Bill Gates, I would be a philanthropist.
-  </p>
   <p>
     One of my favorite quotes these days - We're fixing it all in this generation!
   </p>
