--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="hero-unit">
-  <h2>Hola! I am Anuprit!</h2>
+  <h2>Hola! I am Anuprit</h2>
   <p>My name is Anuprit Kale and you're visiting my personal website. 
   Currently, I live in the amazing city of San Francisco. 
   </p>
