--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,26 @@
 <div class="hero-unit">
-  <h2>Hola! I am Anuprit!!</h2>
-  <p>My name is Anuprit Kale and you're visiting my personal website. 
-  Currently, I live in the amazing city of San Francisco. 
-  </p>
-  <p>
+  <h2>Hola! I am Anuprit</h2>
+
+  <p><h4>My Story - Bragging</h4></p>
+  I left my comfortable corporate gig in 2011 and never looked back since then.
+  Last year December, <a href="https://techcrunch.com/2015/12/14/salesforce-has-acquired-an-ai-startup-called-minhash-to-build-out-its-marketing-analytics/">MinHash</a> got acquired by Salesforce of which I was the founding engineer and #1 employee.
+  <br>
+  Currenly, I am a member of Search Data Science team at Salesforce, and I love what I do and the people I work with.
+  I won the Salesforce T&P internal hackathon where 60 projects competed for the 1st spot.
+  <br>
+  Previously, I was the founding enginner, employee #1 of <a href="https://techcrunch.com/2012/01/01/gympact-launches-to-help-you-keep-your-fitness-resolutions-by-paying-if-you-dont/">Pact</a> and engineer #5 at 
+Appthority, a leader in mobile app security.
+  <br>
+  I'm a Techstars Boston 2012 and StartUp Chile 2011 alumus. I went to College Of Engineering Pune which ranks as 3rd oldest school in Asia
+  and in top 15 out of ~4000 engineering colleges in India.
+  <br>
+  <!-- p>
+  <p><h4>Personal</h4></p>
   I am a super thin and super tall computer engineer who loves programming. If I get time from coding I like to hangout with friends, spend time with family and listen to music. I am fearless and love, love taking chances. I graduated from College Of Engineering, Pune in 2009. I quit my corporate job in 2011 and went down to Chile to join GymPact in its early stages. I enjoy solving problems a lot more than anything else. I am working on www.mydummyserver.com to create a stubbing framework which helps developers work efficiently.</p>
-  <p>
-    One of my favorite quotes these days - We're fixing it all in this generation!
+  <p-->
+  I love spending time with my awesome family and friends. I do a lot of different things in my free time, skiing and hiking being favorites. 
+  I've tried a number of meditation techniques and found that Buddha's Vipassana works for me. 
+  One of my favorite quotes these days - Be kind.
   </p>
 
 
