--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,12 +15,12 @@ Appthority, a leader in mobile app security.
   and in top 15 out of ~4000 engineering colleges in India.
   <br>
   <!-- p>
-  <p><h4>Personal</h4></p>
   I am a super thin and super tall computer engineer who loves programming. If I get time from coding I like to hangout with friends, spend time with family and listen to music. I am fearless and love, love taking chances. I graduated from College Of Engineering, Pune in 2009. I quit my corporate job in 2011 and went down to Chile to join GymPact in its early stages. I enjoy solving problems a lot more than anything else. I am working on www.mydummyserver.com to create a stubbing framework which helps developers work efficiently.</p>
   <p-->
+  <p><h4>Personal</h4></p>
   I love spending time with my awesome family and friends. I do a lot of different things in my free time, skiing and hiking being favorites. 
   I've tried a number of meditation techniques and found that Buddha's Vipassana works for me. 
-  One of my favorite quotes these days - Be kind.
+  <br><br>One of my favorite quotes these days - Be kind.
   </p>
 
 
