--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
   Previously, I was the founding enginner, employee #1 of <a href="https://techcrunch.com/2012/01/01/gympact-launches-to-help-you-keep-your-fitness-resolutions-by-paying-if-you-dont/">Pact</a> and engineer #5 at 
 Appthority, a leader in mobile app security.
   <br><br>
-  I'm a Techstars Boston 2012 and StartUp Chile 2011 alumus. I went to College Of Engineering Pune which ranks as 3rd oldest school in Asia
+  I'm a <a href="http://www.techstars.com/">Techstars Boston 2012</a> and <a href="http://www.startupchile.org/">StartUp Chile 2011</a> alumus. I went to College Of Engineering Pune which ranks as 3rd oldest school in Asia
   and in top 15 out of ~4000 engineering colleges in India.
   <br><br>
   <!-- p>
