--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,12 @@
 Appthority, a leader in mobile app security.
   <br><br>
   I'm a <a href="http://www.techstars.com/">Techstars Boston 2012</a> and <a href="http://www.startupchile.org/">StartUp Chile 2011</a> alumus. I went to College Of Engineering Pune which ranks as 3rd oldest school in Asia
-  and in top 15 out of ~4000 engineering colleges in India.
+  and in top 15 out of ~4000 engineering colleges in India. 
+  
+  <br><br>I spent 9 months programming GPGPUs at <a href="http://www.nvidia.com/">nVidia</a> working on True Motion Estimation and I still remember the day when I went on coding 33 hours straight. 
+  I was 20 years old then and I can't pull that off anymore.
+  <br><br>
+  Bragging end.
   <br><br>
   <!-- p>
   I am a super thin and super tall computer engineer who loves programming. If I get time from coding I like to hangout with friends, spend time with family and listen to music. I am fearless and love, love taking chances. I graduated from College Of Engineering, Pune in 2009. I quit my corporate job in 2011 and went down to Chile to join GymPact in its early stages. I enjoy solving problems a lot more than anything else. I am working on www.mydummyserver.com to create a stubbing framework which helps developers work efficiently.</p>
