--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="hero-unit">
-  <h2>Hola! I am Anuprit</h2>
+  <h2>Hola! I am Anuprit!</h2>
 <br><br>
   <p><h3>My Story - Bragging</h3></p>
   I left my comfortable corporate gig in 2011 and never looked back since then.
