--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,10 +8,10 @@
   Currenly, I am a member of Search Data Science team at Salesforce, and I love what I do and the people I work with.
   I won the Salesforce T&P internal hackathon where 60 projects competed for the 1st spot.
   <br><br>
-  Previously, I was the founding enginner, employee #1 of <a href="https://techcrunch.com/2012/01/01/gympact-launches-to-help-you-keep-your-fitness-resolutions-by-paying-if-you-dont/">Pact</a> and engineer #5 at 
+  Previously, I was the founding enginneer, employee #1 of <a href="https://techcrunch.com/2012/01/01/gympact-launches-to-help-you-keep-your-fitness-resolutions-by-paying-if-you-dont/">Pact</a> and engineer #5 at 
 Appthority, a leader in mobile app security.
   <br><br>
-  I'm a <a href="http://www.techstars.com/">Techstars Boston 2012</a> and <a href="http://www.startupchile.org/">StartUp Chile 2011</a> alumus. I went to College Of Engineering Pune which is the 3rd oldest school in Asia
+  I'm an alumnus of <a href="http://www.techstars.com/">Techstars Boston 2012</a> and <a href="http://www.startupchile.org/">StartUp Chile 2011</a>. I went to College Of Engineering Pune which is the 3rd oldest school in Asia
   and ranks in top 15 out of ~4000 engineering colleges in India. 
   
   <br><br>I spent 9 months programming GPGPUs at <a href="http://www.nvidia.com/">nVidia</a> working on True Motion Estimation and I still remember the day when I went on coding 33 hours straight. 
@@ -23,7 +23,7 @@ Appthority, a leader in mobile app security.
   I am a super thin and super tall computer engineer who loves programming. If I get time from coding I like to hangout with friends, spend time with family and listen to music. I am fearless and love, love taking chances. I graduated from College Of Engineering, Pune in 2009. I quit my corporate job in 2011 and went down to Chile to join GymPact in its early stages. I enjoy solving problems a lot more than anything else. I am working on www.mydummyserver.com to create a stubbing framework which helps developers work efficiently.</p>
   <p-->
   <p><h3>Personal</h3></p>
-  I love spending time with my awesome family and friends. I do a lot of different things in my free time, skiing and hiking being favorites. 
+  I love spending time with my awesome family and friends. I do a lot of different things in my free time; skiing and hiking being favorites. 
   I've tried a number of meditation techniques and found that Buddha's Vipassana works for me. 
   <br><br>One of my favorite quotes these days - Be kind.
   </p>
