--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,10 +5,10 @@
   I left my comfortable corporate gig in 2011 and never looked back since then.
   Last year December, <a href="https://techcrunch.com/2015/12/14/salesforce-has-acquired-an-ai-startup-called-minhash-to-build-out-its-marketing-analytics/">MinHash</a> got acquired by Salesforce of which I was the founding engineer and #1 employee.
   <br><br>
-  Currenly, I am a member of Search Data Science team at Salesforce, and I love what I do and the people I work with.
+  Currently, I am a member of Search Data Science team at Salesforce, and I love what I do and the people I work with.
   I won the Salesforce T&P internal hackathon where 60 projects competed for the 1st spot.
   <br><br>
-  Previously, I was the founding enginneer, employee #1 of <a href="https://techcrunch.com/2012/01/01/gympact-launches-to-help-you-keep-your-fitness-resolutions-by-paying-if-you-dont/">Pact</a> and engineer #5 at 
+  Previously, I was the founding engineer, employee #1 of <a href="https://techcrunch.com/2012/01/01/gympact-launches-to-help-you-keep-your-fitness-resolutions-by-paying-if-you-dont/">Pact</a> and engineer #5 at 
 Appthority, a leader in mobile app security.
   <br><br>
   I'm an alumnus of <a href="http://www.techstars.com/">Techstars Boston 2012</a> and <a href="http://www.startupchile.org/">StartUp Chile 2011</a>. I went to College Of Engineering Pune which is the 3rd oldest school in Asia
