--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="hero-unit">
   <h2>Hola! I am Anuprit!</h2>
 <br><br>
-  <p><h3>My Story - Bragging</h3></p>
+  <!--p><h3>My Story - Bragging</h3></p>
   I left my comfortable corporate gig in 2011 and never looked back since then.
   Last year December, <a href="https://techcrunch.com/2015/12/14/salesforce-has-acquired-an-ai-startup-called-minhash-to-build-out-its-marketing-analytics/">MinHash</a> got acquired by Salesforce of which I was the founding engineer and #1 employee.
   <br><br>
@@ -19,14 +19,11 @@ Appthority, a leader in mobile app security.
   <br><br>
   Bragging end.
   <br><br>
-  <!-- p>
-  I am a super thin and super tall computer engineer who loves programming. If I get time from coding I like to hangout with friends, spend time with family and listen to music. I am fearless and love, love taking chances. I graduated from College Of Engineering, Pune in 2009. I quit my corporate job in 2011 and went down to Chile to join GymPact in its early stages. I enjoy solving problems a lot more than anything else. I am working on www.mydummyserver.com to create a stubbing framework which helps developers work efficiently.</p>
-  <p-->
   <p><h3>Personal</h3></p>
   I love spending time with my awesome family and friends. I do a lot of different things in my free time; skiing and hiking being favorites. 
   I've tried a number of meditation techniques and found that Buddha's Vipassana works for me. 
   <br><br>One of my favorite quotes these days - Be kind.
-  </p>
+  </p-->
 
 
 </div>
